tests/types_first_dep_graph_change/types_first_dep_graph_change.exp

Server should start in types-first mode

Error should refer to test/node_modules/foo.js
Error ------------------------------------------------------------------------------------------------- test/test.js:5:1

Cannot cast `foo()` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test/test.js:5:1
   5| foo() as empty;
      ^^^^^

References:
   test/node_modules/foo.js:3:24
   3| export function foo(): number { return 0; }
                             ^^^^^^ [1]
   test/test.js:5:10
   5| foo() as empty;
               ^^^^^ [2]



Found 1 error

Removing test/node_modules/foo.js should make error refer to node_modules/foo.js
Error ------------------------------------------------------------------------------------------------- test/test.js:5:1

Cannot cast `foo()` to empty because string [1] is incompatible with empty [2]. [incompatible-type]

   test/test.js:5:1
   5| foo() as empty;
      ^^^^^

References:
   node_modules/foo.js:3:24
   3| export function foo(): string { return ''; }
                             ^^^^^^ [1]
   test/test.js:5:10
   5| foo() as empty;
               ^^^^^ [2]



Found 1 error

Adding test/node_modules/foo.js should make error refer to test/node_modules/foo.js
Error ------------------------------------------------------------------------------------------------- test/test.js:5:1

Cannot cast `foo()` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test/test.js:5:1
   5| foo() as empty;
      ^^^^^

References:
   test/node_modules/foo.js:3:24
   3| export function foo(): number { return 0; }
                             ^^^^^^ [1]
   test/test.js:5:10
   5| foo() as empty;
               ^^^^^ [2]



Found 1 error
